--- a/src/app/list-container/list-container.component.html
+++ b/src/app/list-container/list-container.component.html
@@ -1,5 +1,9 @@
-<ul>
-  <li *ngFor="let item of items">{{item}}</li>
-</ul>
+<div class="container">
+  <app-list-item (newItemEvent)="addItem($event)" (removedUser)="removeItem($event)"></app-list-item>
 
-<app-list-item (newItemEvent)="addItem($event)" (removedUser)="removeItem($event)"></app-list-item>
+  <ol class="list-group list-group-numbered">
+    <li class="list-group-item list-group-item-primary" *ngFor="let item of items">
+      <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+      {{item}}</li>
+  </ol>
+</div>
