fix code and style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1>La mia lista</h1>
-<app-list-container></app-list-container>
+<div class="container">
+  <h1>La mia lista</h1>
+  <app-list-container></app-list-container>
+</div>
