--- a/src/app/list-container/list-item/list-item.component.html
+++ b/src/app/list-container/list-item/list-item.component.html
@@ -1,8 +1,5 @@
 <div class="container">
-  <label for="item-input"><span>Aggiungi:</span></label>
+  <label for="item-input"><span>Aggiungi i tuoi impegni giornalieri:</span></label>
   <input type="text" id="item-input" #newItem>
   <button type="button" class="btn btn-primary" (click)="addNewItem(newItem.value)">Aggiungi</button>
-
-
-  <button type="button" class="btn btn-danger" (click)="removeUser()">Clicca qui per eliminare</button>
 </div>
